# velari-assignement

./: .gitignore  README.md  pyproject.toml
tests/: test_evaluator.py
thesis_ordering/: benchmark.py  candidate.py  evaluator.py  fixtures.py  model.py  strategy.py
