[project]
name = "thesis-ordering-assignment"
version = "0.1.0"
description = "Velari take-home: cost-optimal ordering of thesis criteria under early exit"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["thesis_ordering"]

[tool.pytest.ini_options]
testpaths = ["tests"]
